fix Integer init value