@@ -102,8 +102,8 @@ public class ProductImageCropUtils {
 		cropAreaHeight = specificationsHeight;
 		
 		
-		double factorWidth = new Integer(width).doubleValue() / new Integer(specificationsWidth).doubleValue();
-		double factorHeight = new Integer(height).doubleValue() / new Integer(specificationsHeight).doubleValue();
+		double factorWidth = Integer.valueOf(width).doubleValue() / Integer.valueOf(specificationsWidth).doubleValue();
+		double factorHeight = Integer.valueOf(height).doubleValue() / Integer.valueOf(specificationsHeight).doubleValue();
 
 		double factor = factorWidth;
 		
